--- a/public/css/global.css
+++ b/public/css/global.css
@@ -10,3 +10,9 @@
     -ms-border-radius: 0;
     -o-border-radius: 0;
 } */
+
+@media screen and (min-width: 768px) {
+    .sidebar {
+        height: 100vh;
+    }
+}
